<?xml version="1.0" encoding="utf-8"?><!--  Copyright Bavand Shadman Adman <adman.shadman@gmail.com>

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0 -->
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory>
        <Preference
            android:icon="@drawable/ic_light_bulb"
            android:key="PREFERENCE_ABOUT"
            android:layout="@layout/item_preference"
            android:title="@string/about" />
        <intent android:action="" />
        <Preference
            android:icon="@drawable/ic_cupcake"
            android:key="PREFERENCE_OPEN_SOURCE"
            android:layout="@layout/item_preference"
            android:title="@string/open_source_librarys">
            <intent android:action="" />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/item_preferance_category"
        android:title="@string/user_interface">
        <ListPreference
            android:defaultValue="Light"
            android:entries="@array/VOIS_LANGUAGE"
            android:entryValues="@array/VOIS_LANGUAGE"
            android:icon="@drawable/ic_microphone_alt"
            android:key="PREFERENCE_VOIS_LANGUAGE"
            android:layout="@layout/item_preference"
            android:negativeButtonText="@string/never_mind"
            android:summary="@string/chnage_voice_speech_language"
            android:title="@string/voice_speech" />
        <Preference
            android:icon="@drawable/ic_pie_chart"
            android:key="PREFERENCE_CLEAR_HISTORY"
            android:layout="@layout/item_preference"
            android:summary="@string/delete_search_history_preferance"
            android:title="@string/search_history_preferance" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
