<?xml version="1.0" encoding="utf-8"?><!--  Copyright Bavand Shadman Adman <adman.shadman@gmail.com>

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0 -->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/card_view_ads_corners">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding"
            android:text="@string/select_image"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/h3" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGrayLiter" />

        <TextView
            android:id="@+id/textViewChooseFromGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/image_button_padding"
            android:text="@string/select_form_gallery"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/h4" />

        <TextView
            android:id="@+id/textViewTakePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/image_button_padding"
            android:text="@string/take_a_picture"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/h4" />
    </LinearLayout>
</androidx.cardview.widget.CardView>