<?xml version="1.0" encoding="utf-8"?><!--  Copyright Bavand Shadman Adman <adman.shadman@gmail.com>

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0 -->
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl"
        android:orientation="vertical"
        tools:context=".ui.search.SearchFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginRight="@dimen/activity_margin"
            android:text="@string/search_for_shop"
            android:textAlignment="viewStart"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="@dimen/h4" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin"
            app:cardCornerRadius="@dimen/card_view_search_corners">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:nestedScrollingEnabled="true"
                app:commitIcon="@drawable/ic_checked_1"
                app:defaultQueryHint="@string/search_hint"
                app:queryHint="@string/search_hint"
                app:searchIcon="@drawable/ic_search"
                app:voiceIcon="@drawable/ic_microphone" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/history_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/searchClusterApp"
            android:orientation="horizontal"
            android:paddingStart="12dp"
            android:paddingEnd="12dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:text="@string/search_history"
                android:textAlignment="viewStart"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="@dimen/h4" />

            <Button
                android:id="@+id/clearAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:singleLine="true"
                android:text="@string/clear_search_history"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="@dimen/h5" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/searchCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/history_layout"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginRight="@dimen/activity_margin"
            android:animateLayoutChanges="true"
            app:cardCornerRadius="@dimen/card_view_ads_corners">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/searchHistory"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:scrollbars="vertical" />

            <TextView
                android:id="@+id/emptyView"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/empty_search_history"
                android:textColor="?attr/colorAccent"
                android:textSize="@dimen/h4" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>